--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
             background-color: rgba(255, 255, 255, 1);
         }
     </style>
-    <title></title>
+    <title>TITLE</title>
     <script type="text/javascript" class="silex-json-styles">
         [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"min-height":"600px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"36px","width":"960px","top":"37px","left":"1px"}},"mobile":{},"componentData":{}}]
     </script>
