--- a/test.html
+++ b/test.html
@@ -20,6 +20,16 @@
         .body-initial {
             background-color: rgba(255, 255, 255, 1);
         }
+        
+        .silex-id-1491230591478-1 {
+            top: 100px;
+            left: NaNpx;
+        }
+        
+        .silex-id-1491230591477-0 {
+            min-height: 100px;
+            background-color: rgb(255, 255, 255);
+        }
     </style>
     <title>TITLE</title>
     <script type="text/javascript" class="silex-json-styles">
@@ -64,6 +74,9 @@
 
 
 
+    <div data-silex-type="container" class="prevent-draggable container-element website-min-width editable-style silex-id-1491230591478-1 section-element" data-silex-id="silex-id-1491230591478-1">
+        <div data-silex-type="container" class="editable-style silex-element-content website-width silex-id-1491230591477-0 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1491230591477-0"></div>
+    </div>
 </body>
 
 </html>
